# daily

./: Cargo.toml  README.md
src/: adapters.rs  get_tasks_input.rs  get_tasks_service.rs  lib.rs  main.rs  presenters.rs  request.rs  task.rs  user_credentials.rs  utils.rs
src/adapters/: cli_presenter.rs  mod.rs  summary_presenter.rs  task_adapters.rs  task_http_gateway_adapters.rs
src/application/: get_tasks_error.rs  get_tasks_usecase.rs  mod.rs  tasks_gateway.rs
src/domain/: task.rs
src/infrastructure/: main_cli.rs  mod.rs
