[package]
name = "daily-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.34"
futures = "0.3.30"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
